--- a/src/Build.Mvc.TwitterBootstrap/Build.Mvc.TwitterBootstrap.csproj
+++ b/src/Build.Mvc.TwitterBootstrap/Build.Mvc.TwitterBootstrap.csproj
@@ -11,8 +11,6 @@
     <AssemblyName>Build.Mvc.TwitterBootstrap</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,10 +33,20 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>build.mvc.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>pubkey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="$(SolutionDir)/SolutionInfo.cs" />
+    <Compile Include="CheckboxFormGroupConfig.cs" />
+    <Compile Include="Extensions\ExtensionsForIHorizontalFormSizing.cs" />
+    <Compile Include="Helpers\CheckBoxGroupHelper.cs" />
+    <Compile Include="Extensions\ExtensionsForTwitterBoostrap.cs" />
+    <Compile Include="Helpers\ExtensionsForIColumnSizing.cs" />
+    <Compile Include="Interfaces\IFormGroupConfig.cs" />
+    <Compile Include="SelectListFormGroupConfig.cs" />
+    <Compile Include="Helpers\SelectListGroupHelper.cs" />
+    <Compile Include="TextBoxFormGroupConfig.cs" />
+    <Compile Include="Helpers\TextBoxGroupHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -48,37 +56,44 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.Helpers.dll</HintPath>
+    <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.1.2\lib\net45\System.Web.Helpers.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.Mvc.4.0.20710.0\lib\net40\System.Web.Mvc.dll</HintPath>
+    <Reference Include="System.Web.Mvc, Version=5.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.1.2\lib\net45\System.Web.Mvc.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.Razor.2.0.20715.0\lib\net40\System.Web.Razor.dll</HintPath>
+    <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.Razor.3.1.2\lib\net45\System.Web.Razor.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.dll</HintPath>
+    <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.1.2\lib\net45\System.Web.WebPages.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.WebPages.Deployment, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Deployment.dll</HintPath>
+    <Reference Include="System.Web.WebPages.Deployment, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.1.2\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
+    <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.1.2\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BtnBuilder.cs" />
-    <Compile Include="BtnStyles.cs" />
-    <Compile Include="ExtensionsForTwitterBoostrap.cs" />
-    <Compile Include="Glyph.cs" />
-    <Compile Include="MagicStrings.cs" />
+    <Compile Include="Builders\BootstrapCheckBoxFormGroupBuilder.cs" />
+    <Compile Include="Builders\BootstrapSelectListFormGroupBuilder.cs" />
+    <Compile Include="Builders\BootstrapTextboxFormGroupBuilder.cs" />
+    <Compile Include="Builders\BtnBuilder.cs" />
+    <Compile Include="Constants\BtnStyles.cs" />
+    <Compile Include="Builders\BootstrapFormGroupBuilder.cs" />
+    <Compile Include="Builders\CheckboxLabelBuilder.cs" />
+    <Compile Include="FormGroupConfig.cs" />
+    <Compile Include="Constants\FormGroupDisplay.cs" />
+    <Compile Include="Extensions\FormGroupExtensions.cs" />
+    <Compile Include="Constants\Glyph.cs" />
+    <Compile Include="Constants\MagicStrings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -88,10 +103,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="build.mvc.pfx" />
-    <None Include="codemonkey.pfx" />
+    <None Include="Build.Mvc.TwitterBootstap.nuspec">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Build.Mvc.TwitterBootstrap.csproj.DotSettings" />
     <None Include="packages.config" />
+    <None Include="pubkey.snk" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="CopyOutputToPublishFolder" AfterTargets="build">
     <PropertyGroup>
@@ -99,5 +118,4 @@
     </PropertyGroup>
     <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(publishFolder)/lib/" />
   </Target>
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
 </Project>
