Adding RenderValidationMessage support for Form Group helpers

--- a/src/Build.Mvc.TwitterBootstrap/Build.Mvc.TwitterBootstap.nuspec
+++ b/src/Build.Mvc.TwitterBootstrap/Build.Mvc.TwitterBootstap.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <version>$version$</version>
-    <id>Build.Mvc.TwiterBootstrap</id>
+    <id>Build.Mvc.TwitterBootstrap</id>
     <title>Build.Mvc addon for TwitterBootstrap</title>
     <authors>grcodemonkey</authors>
     <owners>Jeremy Bell</owners>
